LOYIHA.md: APK avtomatik nomlash tasdiqlandi + Java tuzog'i yozildi
Haqiqiy `gradlew assembleDebug` bilan sinaldi (BUILD SUCCESSFUL, 1m 2s):
natija fayl nomi "Oliy maqsad v11 (debug).apk".

Tizimdagi java 8-versiya, Gradle 11+ talab qiladi — JAVA_HOME ni
Android Studio jbr (Java 21) ga qaratish shart.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>